--- a/index.html
+++ b/index.html
@@ -20,97 +20,206 @@
                 <img src="themes/warsawjs/pictures/logo.png">
             </div>
             <div class="content">
-                <h2>WarsawJS Presentation Template</h2>
-                <p>Author Name <a href="http://twitter.com/author">@author</a>
+                <img style='height: 211px; width: 140px' src='themes/warsawjs/pictures/piotr_zientara.jpg'>
+                <h2>First Steps With  ember - CLI</h2>
+                <p>Piotr Zientara <a href="http://twitter.com/piotr_zientara">@Piotr_Zientara</a>
             </div>
         </div>
     </section>
 
     <section class="slide">
         <div>
-            <h2>Plain Text on Your Slides</h2>
-
-            <p>Lorem ipsum dolor sit amet, consectetur <a href="#4">adipisicing</a> elit, sed do eiusmod tempor incididunt
-                ut labore et dolore magna aliqua. Ut enim ad minim veniam, <em>quis nostrud</em> exercitation ullamco
-                laboris <strong>nisi ut aliquip</strong> ex ea commodo consequat. Duis aute irure <i>dolor</i> in
-                reprehenderit in voluptate velit esse cillum <b>dolore</b> eu fugiat nulla pariatur. Excepteur sint occaecat
-                cupidatat non proident, sunt in <code>&lt;culpa&gt;</code> qui officia deserunt mollit anim id est laborum.
-            </p>
+            <h2>Abstract</h2>
+            <ul>
+                <li>What is ember CLI?</li>
+                <li>What does it give?</li>
+                <li>How working with ember CLI looks like?</li>
+                <li>Tips on working with ember CLI</li>
+            </ul>
         </div>
     </section>
 
     <section class="slide">
         <div>
-            <h2>All Kind of Lists</h2>
-            <ol>
-                <li>Simple lists are marked with bullets</li>
-                <li>Ordered lists begin with a number</li>
-                <li>You can even nest lists one inside another
-                    <ul>
-                        <li>Or mix their types</li>
-                        <li>But do not go too far</li>
-                        <li>Otherwise audience will be bored</li>
-                    </ul>
-                </li>
-                <li>Look, seven rows exactly!</li>
-            </ol>
+            <h2>What is ember CLI?</h2>
+            <p>Tool for ember.js which origins from Ember App Kit (EAK) with:<p>
+                <ul>
+                    <li>strong conventional project structure</li>
+                    <li>asset compilation based on <a href='https://github.com/broccolijs/broccoli'>broccoli</a></li>
+                </ul>
         </div>
     </section>
 
     <section class="slide">
         <div>
-            <h2>JavaScript Samples</h2>
-            <pre>
-                <code><mark class="comment">// Crockford style IIFE</mark></code>
-                <code>(function () {</code>
-                <code>  var <mark>someVar</mark> = 'value';</code>
-                <code>  console.<mark class="important">log</mark>(someVar);</code>
-                <code>}());</code>
-            </pre>
+            <h2>What can ember CLI give?</h2>
+
+            <h3><em>a new app in 4 steps!</em></h3>
         </div>
     </section>
+
     <section class="slide">
         <div>
-            <h2>Even Tables</h2>
-            <table>
-                <tr>
-                    <th scope="col">Locavore</th>
-                    <th>Umami</th>
-                    <th>Helvetica</th>
-                    <th>Vegan</th>
-                </tr>
-                <tr>
-                    <th scope="row">Fingerstache</th>
-                    <td>Kale</td>
-                    <td>Chips</td>
-                    <td>Keytar</td>
-                </tr>
-                <tr>
-                    <th scope="row">Sriracha</th>
-                    <td>Gluten-free</td>
-                    <td>Ennui</td>
-                    <td>Keffiyeh</td>
-                </tr>
-                <tr>
-                    <th scope="row">Thundercats</th>
-                    <td>Jean</td>
-                    <td>Shorts</td>
-                    <td>Biodiesel</td>
-                </tr>
-                <tr>
-                    <th scope="row">Terry</th>
-                    <td>Richardson</td>
-                    <td>Swag</td>
-                    <td>Blog</td>
-                </tr>
-            </table>
-            <p>It’s good to have information organized.</p>
+            <h2>Step I: install ember CLI</h2>
+            <img style='width: 847px; height: 455px' src='themes/warsawjs/pictures/step_I.png'>
+
+        </div>
+    </section>
+
+    <section class="slide">
+        <div>
+            <h2>Step II: create a new app</h2>
+            <img style='height: 455px' src='themes/warsawjs/pictures/step_II.png'>
+
+        </div>
+    </section>
+
+    <section class="slide">
+        <div>
+            <h2>Step III: after 2-3 minutes run the server</h2>
+            <img style='height: 455px' src='themes/warsawjs/pictures/step_III.png'>
+
+        </div>
+    </section>
+
+    <section class="slide">
+        <div>
+            <h2>Step IV: Voilà!</h2>
+            <img style='height: 455px' src='themes/warsawjs/pictures/step_IV.png'>
+
+        </div>
+    </section>
+
+    <section class="slide">
+        <div>
+            <h2>How the app structure looks like?</h2>
+            <img style='height: 455px' src='themes/warsawjs/pictures/9.png'>
+
+        </div>
+    </section>
+
+    <section class="slide">
+        <div>
+            <h2>The app folder?</h2>
+            <img style='width: 400px; height: 400px' src='themes/warsawjs/pictures/10.png'>
+
+        </div>
+    </section>
+
+    <section class="slide">
+        <div>
+            <h2>ember generate commands</h2>
+            <ul>
+            <li>acceptance-test</li>
+            <li>component</li>
+            <li>controller</li>
+            <li>mixin</li>
+            <li>model</li>
+            <li>resource</li>
+            <li>route</li>
+            <li>template</li>
+            <li>And more...</li>
+        </div>
+    </section>
+
+    <section class="slide">
+        <div>
+            <h2>generate the easy way</h2>
+            <img style='width: 700px' src='themes/warsawjs/pictures/12.png'>
+        </div>
+    </section>
+
+    <section class="slide">
+        <div>
+            <img style='width: 800px' src='themes/warsawjs/pictures/13.png'>
+        </div>
+    </section>
+
+    <section class="slide">
+        <div>
+            <h2>controller and route…</h2>
+            <img style='width: 800px' src='themes/warsawjs/pictures/14.png'>
+        </div>
+    </section>
+
+    <section class="slide">
+        <div>
+            <h2>controller</h2>
+            <img style='width: 800px' src='themes/warsawjs/pictures/15.png'>
+        </div>
+    </section>
+
+    <section class="slide">
+        <div>
+            <h2>route</h2>
+            <img style='width: 800px' src='themes/warsawjs/pictures/16.png'>
+
+        </div>
+    </section>
+
+    <section class="slide">
+        <div>
+            <h2>router</h2>
+            <img style='width: 800px' src='themes/warsawjs/pictures/17.png'>
+
+        </div>
+    </section>
+
+    <section class="slide">
+        <div>
+            <h2>Is it ok to use “ember generate” for beginners?</h2>
+            <ul>
+                <li>Some believe no, but yes! And pay attention ;-)</li>
+                <li>Learn from both sides: form particular to general and from the big picture to the details.</li>
+            </ul>
+        </div>
+    </section>
+
+    <section class="slide">
+        <div>
+            <h2>Expected gain in</h2>
+            <ul>
+                <li>Code organisation (folders and files tree)</li>
+                <li>Easier getting into project and understanding it</li>
+                <li>Code quality (ES 6 features)</li>
+                <li>Work flow (autosave, strong conventions, command line generators)</li>
+            </ul>
+        </div>
+    </section>
+
+    <section class="slide">
+        <div>
+            <h2>Some tips</h2>
+            <ul>
+                <li>Use original syntax, Coffee Script and Emblem will make your time worse</li>
+                <li>Embrace the conventions, you’re going to love them</li>
+                <li>Be careful with new versions…</li>
+            </ul>
+        </div>
+    </section>
+
+    <section class="slide">
+        <div>
+            <h2>Project is in progress…</h2>
+
+            <p>New features are comming!</p>
+            <li>lazy loading of app segments</li>
+            <li>more ES6 features</li>
+        </div>
+    </section>
+
+    <section class="slide">
+        <div>
+            <h2>Links</h2>
+                <li><a href='https://github.com/stefanpenner/ember-cli/'>ember CLI</a></li>
+                <li><a href='https://www.youtube.com/watch?v=4D8z3972h64'>Stefan Penner EmberConf 2014</a></li>
+                <li><a href='https://www.youtube.com/watch?v=wtgsIf59XAo'>Jo Liss Ember Fest 2014</a></li>
         </div>
     </section>
 
     <section class="slide cover">
         <div>
-            <img src="./themes/warsawjs/pictures/bigphoto.jpg" alt="">
+            <img src="./themes/warsawjs/pictures/ember.jpg" alt="">
         </div>
     </section>
 
